crates/check_cli/tests/snapshots/main_commands_lint/should_report_when_schema_version_mismatch.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "$schema": "https://checkjs.dev/schemas/0.0.1/schema.json"
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.json:2:16 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The configuration schema version does not match the CLI version 0.0.0
  
    1 │ {
  > 2 │     "$schema": "https://checkjs.dev/schemas/0.0.1/schema.json"
      │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ }
    4 │         
  
  i   Expected:                     0.0.0
      Found:                        0.0.1
  
  
  i Run the command check migrate to migrate the configuration file.
  

```

```block
check.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   {
    2   │ - ····"$schema":·"https://checkjs.dev/schemas/0.0.1/schema.json"
      2 │ + → "$schema":·"https://checkjs.dev/schemas/0.0.1/schema.json"
    3 3 │   }
    4   │ - ········
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
