crates/check_cli/tests/snapshots/main_commands_lint/suppression_syntax_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.js`

```js
// check-ignore(:

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:16 suppressions/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token, expected one of ':' or whitespace.
  
  > 1 │ // check-ignore(:
      │                ^
    2 │ 
  
  i A category is mandatory: try lint, format, assist or plugin.
  
  i Example of suppression: // check-ignore lint: reason
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
