crates/check_cli/tests/snapshots/main_commands_lint/upgrade_severity.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "style": {
        "noNegationElse": "error"
      }
    }
  }
}
```

## `file.js`

```js
if(!cond) { exprA(); } else { exprB() }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:1 lint/style/noNegationElse  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invert blocks when performing a negation test.
  
  > 1 │ if(!cond) { exprA(); } else { exprB() }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Invert the condition and the blocks.
  
  - if(!cond)·{·exprA();·}·else·{·exprB()·}
  + if(cond)·{·exprB()·}·else·{·exprA();·}
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
